--- a/texto.tex
+++ b/texto.tex
@@ -16,6 +16,7 @@
 \usepackage{float}
 \usepackage[section]{placeins}
 %\usepackage{fancyhdr} % para cabeçalhos mais elaborados
+\usepackage{subfig}
 
 \fvset{fontsize=\scriptsize}
 
